--- a/normalize.styl
+++ b/normalize.styl
@@ -1,4 +1,5 @@
-/*! normalize.css v3.0.3 | MIT License | github.com/necolas/normalize.css */
+/*! normalize.styl.lite v0.0.1 | MIT License | github.com/seleckis/normalize.styl.lite */
+/*! derivative of normalize.css v3.0.3 by github.com/necolas/normalize.css */
 
 /**
  * 1. Set default font family to sans-serif.
@@ -258,9 +259,9 @@ select
  */
 
 button,
-html input[type="button"], // 1
-input[type="reset"],
-input[type="submit"]
+[type="button"], // 1
+[type="reset"],
+[type="submit"]
   -webkit-appearance: button // 2
   cursor: pointer // 3
 
@@ -268,16 +269,14 @@ input[type="submit"]
  * Re-set default cursor for disabled elements.
  */
 
-button[disabled],
-html input[disabled]
+[disabled]
   cursor: default
 
 /**
  * Remove inner padding and border in Firefox 4+.
  */
 
-button::-moz-focus-inner,
-input::-moz-focus-inner
+::-moz-focus-inner
   border: 0
   padding: 0
 
@@ -297,8 +296,8 @@ input
  * 2. Remove excess padding in IE 8/9/10.
  */
 
-input[type="checkbox"],
-input[type="radio"]
+[type="checkbox"],
+[type="radio"]
   box-sizing: border-box // 1
   padding: 0 // 2
 
@@ -308,8 +307,8 @@ input[type="radio"]
  * decrement button to change from `default` to `text`.
  */
 
-input[type="number"]::-webkit-inner-spin-button,
-input[type="number"]::-webkit-outer-spin-button
+::-webkit-inner-spin-button,
+::-webkit-outer-spin-button
   height: auto
 
 /**
@@ -317,7 +316,7 @@ input[type="number"]::-webkit-outer-spin-button
  * 2. Address `box-sizing` set to `border-box` in Safari and Chrome.
  */
 
-input[type="search"]
+[type="search"]
   -webkit-appearance: textfield // 1
   box-sizing: content-box // 2
 
@@ -327,8 +326,8 @@ input[type="search"]
  * padding (and `textfield` appearance).
  */
 
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-decoration
+::-webkit-search-cancel-button,
+::-webkit-search-decoration
   -webkit-appearance: none
 
 /**
