--- a/normalize.styl
+++ b/normalize.styl
@@ -1,4 +1,4 @@
-/*! normalize.styl.lite v0.0.2 | MIT License | github.com/seleckis/normalize.styl.lite */
+/*! normalize.styl.lite v0.0.3 | MIT License | github.com/seleckis/normalize.styl.lite */
 /*! derivative of normalize.css v3.0.3 by github.com/necolas/normalize.css */
 
 /**
@@ -8,16 +8,16 @@
  */
 
 html
-  font-family: sans-serif // 1
-  -ms-text-size-adjust: 100% // 2
-  -webkit-text-size-adjust: 100% // 2
+	font-family: sans-serif // 1
+	-ms-text-size-adjust: 100% // 2
+	-webkit-text-size-adjust: 100% // 2
 
 /**
  * Remove default margin.
  */
 
 body
-  margin: 0
+	margin: 0
 
 /* HTML5 display definitions
    ========================================================================== */
@@ -42,7 +42,7 @@ menu,
 nav,
 section,
 summary
-  display: block
+	display: block
 
 /**
  * 1. Correct `inline-block` display not defined in IE 8/9.
@@ -53,8 +53,8 @@ audio,
 canvas,
 progress,
 video
-  display: inline-block // 1
-  vertical-align: baseline // 2
+	display: inline-block // 1
+	vertical-align: baseline // 2
 
 /**
  * Prevent modern browsers from displaying `audio` without controls.
@@ -62,42 +62,37 @@ video
  */
 
 audio:not([controls])
-  display: none
-  height: 0
+	display: none
+	height: 0
 
-/**
- * Address `[hidden]` styling not present in IE 8/9/10.
- * Hide the `template` element in IE 8/9/10/11, Safari, and Firefox < 22.
- */
-
-[hidden],
-template
-  display: none
 
 /* Links
    ========================================================================== */
 
 /**
  * 1. Remove the gray background color from active links in IE 10.
- * 2. Improve readability of focused elements when they are also in
- *    an active/hover state.
  */
 
 a
-  background-color: transparent // 1
-  &:active,
-  &:hover
-    outline: 0 // 2
+	background-color: transparent // 1
+
+/**
+ * 2. Improve readability of focused elements when they are also in
+ *    an active state.
+ */
+:active
+	outline: 0 // 2
+
 
 /* Text-level semantics
    ========================================================================== */
 
 /**
- * Address styling not present in IE 8/9/10/11, Safari, and Chrome.
+ * Remove border styling in Firefox.
  */
 
-abbr[title]
-  border-bottom: 1px dotted
+[title]
+	border-bottom: 0
 
 /**
  * Address style set to `bolder` in Firefox 4+, Safari, and Chrome.
@@ -105,14 +100,14 @@ abbr[title]
 
 b,
 strong
-  font-weight: bold
+	font-weight: bold
 
 /**
  * Address styling not present in Safari and Chrome.
  */
 
 dfn
-  font-style: italic
+	font-style: italic
 
 /**
  * Address variable `h1` font-size and margin within `section` and `article`
@@ -120,23 +115,23 @@ dfn
  */
 
 h1
-  font-size: 2em
-  margin: 0.67em 0
+	font-size: 2em
+	margin: 0.67em 0
 
 /**
  * Address styling not present in IE 8/9.
  */
 
 mark
-  background: #ff0
-  color: #000
+	background: #ff0
+	color: #000
 
 /**
  * Address inconsistent and variable font size in all browsers.
  */
 
 small
-  font-size: 80%
+	font-size: 80%
 
 /**
  * Prevent `sub` and `sup` affecting `line-height` in all browsers.
@@ -144,58 +139,59 @@ small
 
 sub,
 sup
-  font-size: 75%
-  line-height: 0
-  position: relative
-  vertical-align: baseline
+	font-size: 75%
+	line-height: 0
+	position: relative
+	vertical-align: baseline
 
 sup
-  top: -0.5em
+	top: -0.5em
 
 sub
-  bottom: -0.25em
+	bottom: -0.25em
 
 /* Embedded content
-   ========================================================================== */
+	 ========================================================================== */
 
 /**
  * Remove border when inside `a` element in IE 8/9/10.
  */
 
 img
-  border: 0
+	border: 0
 
 /**
  * Correct overflow not hidden in IE 9/10/11.
  */
 
 svg:not(:root)
-  overflow: hidden
+	overflow: hidden
 
 /* Grouping content
-   ========================================================================== */
+	 ========================================================================== */
 
 /**
  * Address margin not present in IE 8/9 and Safari.
+ * Nobody needs horizontal margin for figure. Everybody has own styling for this element.
  */
 
 figure
-  margin: 1em 40px
+	margin: 1em 0
 
 /**
  * Address differences between Firefox and other browsers.
  */
 
 hr
-  box-sizing: content-box
-  height: 0
+	box-sizing: content-box
+	height: 0
 
 /**
  * Contain overflow in all browsers.
  */
 
 pre
-  overflow: auto
+	overflow: auto
 
 /**
  * Address odd `em`-unit font size rendering in all browsers.
@@ -205,11 +201,11 @@ code,
 kbd,
 pre,
 samp
-  font-family: monospace, monospace
-  font-size: 1em
+	font-family: monospace, monospace
+	font-size: 1em
 
 /* Forms
-   ========================================================================== */
+	 ========================================================================== */
 
 /**
  * Known limitation: by default, Chrome and Safari on OS X allow very limited
@@ -218,7 +214,7 @@ samp
 
 /**
  * 1. Correct color not being inherited.
- *    Known issue: affects color of disabled elements.
+ *		Known issue: affects color of disabled elements.
  * 2. Correct font properties not being inherited.
  * 3. Address margins set differently in Firefox 4+, Safari, and Chrome.
  */
@@ -228,16 +224,16 @@ input,
 optgroup,
 select,
 textarea
-  color: inherit // 1
-  font: inherit // 2
-  margin: 0 // 3
+	color: inherit // 1
+	font: inherit // 2
+	margin: 0 // 3
 
 /**
  * Address `overflow` set to `hidden` in IE 8/9/10/11.
  */
 
 button
-  overflow: visible
+	overflow: visible
 
 /**
  * Address inconsistent `text-transform` inheritance for `button` and `select`.
@@ -248,37 +244,37 @@ button
 
 button,
 select
-  text-transform: none
+	text-transform: none
 
 /**
  * 1. Avoid the WebKit bug in Android 4.0.* where (2) destroys native `audio`
- *    and `video` controls.
+ *		and `video` controls.
  * 2. Correct inability to style clickable `input` types in iOS.
  * 3. Improve usability and consistency of cursor style between image-type
- *    `input` and others.
+ *		`input` and others.
  */
 
 button,
 [type="button"], // 1
 [type="reset"],
 [type="submit"]
-  -webkit-appearance: button // 2
-  cursor: pointer // 3
+	-webkit-appearance: button // 2
+	cursor: pointer // 3
 
 /**
  * Re-set default cursor for disabled elements.
  */
 
 [disabled]
-  cursor: default
+	cursor: default
 
 /**
  * Remove inner padding and border in Firefox 4+.
  */
 
 ::-moz-focus-inner
-  border: 0
-  padding: 0
+	border: 0
+	padding: 0
 
 /**
  * Address Firefox 4+ setting `line-height` on `input` using `!important` in
@@ -286,7 +282,7 @@ button,
  */
 
 input
-  line-height: normal
+	line-height: normal
 
 /**
  * It's recommended that you don't attempt to style these elements.
@@ -298,8 +294,8 @@ input
 
 [type="checkbox"],
 [type="radio"]
-  box-sizing: border-box // 1
-  padding: 0 // 2
+	box-sizing: border-box // 1
+	padding: 0 // 2
 
 /**
  * Fix the cursor style for Chrome's increment/decrement buttons. For certain
@@ -309,16 +305,14 @@ input
 
 ::-webkit-inner-spin-button,
 ::-webkit-outer-spin-button
-  height: auto
+	height: auto
 
 /**
  * 1. Address `appearance` set to `searchfield` in Safari and Chrome.
- * 2. Address `box-sizing` set to `border-box` in Safari and Chrome.
  */
 
 [type="search"]
-  -webkit-appearance: textfield // 1
-  box-sizing: content-box // 2
+	-webkit-appearance: textfield // 1
 
 /**
  * Remove inner padding and search cancel button in Safari and Chrome on OS X.
@@ -328,16 +322,16 @@ input
 
 ::-webkit-search-cancel-button,
 ::-webkit-search-decoration
-  -webkit-appearance: none
+	-webkit-appearance: none
 
 /**
- * Define consistent border, margin, and padding.
+ * Remove border and padding. Change margin to 1em to fit margin for <p>.
  */
 
 fieldset
-  border: 1px solid #c0c0c0
-  margin: 0 2px
-  padding: 0.35em 0.625em 0.75em
+	border: 0
+	margin: 1em 0
+	padding: 0
 
 /**
  * 1. Correct `color` not being inherited in IE 8/9/10/11.
@@ -345,15 +339,15 @@ fieldset
  */
 
 legend
-  border: 0 // 1
-  padding: 0 // 2
+	border: 0 // 1
+	padding: 0 // 2
 
 /**
  * Remove default vertical scrollbar in IE 8/9/10/11.
  */
 
 textarea
-  overflow: auto
+	overflow: auto
 
 /**
  * Don't inherit the `font-weight` (applied by a rule above).
@@ -361,19 +355,19 @@ textarea
  */
 
 optgroup
-  font-weight: bold
+	font-weight: bold
 
 /* Tables
-   ========================================================================== */
+	 ========================================================================== */
 
 /**
  * Remove most spacing between table cells.
  */
 
 table
-  border-collapse: collapse
-  border-spacing: 0
+	border-collapse: collapse
+	border-spacing: 0
 
 td,
 th
-  padding: 0
+	padding: 0
