change padding and margin for figure and menu

--- a/normalize.styl
+++ b/normalize.styl
@@ -1,4 +1,4 @@
-/*! normalize.styl.lite v0.0.4 | MIT License | github.com/seleckis/normalize.styl.lite */
+/*! normalize.styl.lite v0.0.5 | MIT License | github.com/seleckis/normalize.styl.lite */
 /*! derivative of normalize.css v3.0.3 by github.com/necolas/normalize.css */
 
 /**
@@ -172,11 +172,12 @@ svg:not(:root)
 
 /**
  * Address margin not present in IE 8/9 and Safari.
- * Nobody needs horizontal margin for figure. Everybody has own styling for this element.
+ * Nobody needs horizontal margin for figure and menu. Everybody has own styling for this element.
  */
 
-figure
+figure, menu
 	margin: 1em 0
+	padding: 0
 
 /**
  * Address differences between Firefox and other browsers.
