address active only for a tag

--- a/normalize.styl
+++ b/normalize.styl
@@ -80,7 +80,7 @@ a
  * 2. Improve readability of focused elements when they are also in
  *    an active state.
  */
-:active
+a:active
 	outline: 0 // 2
 
 
